Springboot WebFlux - Final
Se migro el proyecto de java (guardado en carpeta "Java only", y se subio la version final del proyecto.

Esta version final incorpora el uso de Springboot WebFlux

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -33,7 +33,7 @@
 </head>
 <body>
   <h1>OpenTimestamps — UI de prueba</h1>
-  <p class="hint">Asegurate que la API corre en <strong>http://localhost:8080</strong>. Si usás otro host/puerto actualizá la variable <code>API_BASE</code> en el script.</p>
+  <p class="hint">Asegurarse de que la API corre en <strong>http://localhost:8080</strong>. Si usás otro host/puerto actualizá la variable <code>API_BASE</code> en el script.</p>
 
   <!-- STAMP -->
   <div class="card">
@@ -103,7 +103,7 @@
 
 
   <script>
-    // CONFIG: si tu backend corre en otro host/puerto cambialo aquí.
+    // CONFIG: si el backend corre en otro host/puerto cambialo aquí.
     const API_BASE = '';
 
     // Helpers DOM
